# github-config

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  renovate.json  sync.yml
.github/workflows/: linting.yaml  sync.yaml
github/workflows/: labels.yaml
python_package/.devcontainer/: devcontainer.json
