[tool.poetry]
name = "github-config"
version = "0.1.0"
description = "A tool to manage GitHub repository common configuration files."
authors = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
pre-commit-hooks = "4.5.0"
yamllint = "1.33.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
