[tool.poetry]
name = "github-config"
package-mode = false
description = "A tool to manage GitHub repository common configuration files."
authors = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"
pre-commit-hooks = "5.0.0"
yamllint = "1.36.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
